# rfs

./: Cargo.toml  build.rs  config.json  resources.rc
src/: config.rs  initlogger.rs  input.rs  main.rs  notification.rs  sync.rs
