[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
fs_extra = "1.2"
crossterm = "0.28.1"
log = "0.4"
simplelog = "0.12.2" # Oder flexi_logger = "0.27"
device_query = "2.1.0"
winrt-notification = "0.5"
tray-item = "0.10.0"


[build-dependencies]
windres = "*"

[[bin]]
name = "rfs"
path = "src/main.rs"

[profile.release]
opt-level = 3

[package.metadata]
cargo = { windows_subsystem = "windows" }
